# academic-radar

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  academic_radar_gui.py  audit_feeds.py  black_studies_radar.py  black_studies_sent.json  bsky_accounts.txt  bsky_watchlist_core.txt  export_bsky_follows.py  feedly.opml  feedly_active.opml  index.html  pyproject.toml  radar.py  requirements.txt  sent_items.json
.github/ISSUE_TEMPLATE/: add_cfp.yml  backfill_conference.yml
.github/workflows/: audit_feeds.yml  black_studies_radar.yml  build_windows_app.yml  cfp_backfill_archive.yml  cfp_deadline_digest.yml  cfp_ingest_archive.yml  cfp_parse_draft.yml  pages.yml  radar.yml  release.yml  release_check.yml
academic_radar/: __init__.py  cli.py  config.py  diagnostics.py  emailer.py  gui.py  pipeline.py  presets.py  privacy_report.py  render.py  scoring.py  setup.py  sources.py  state.py  summary.py  text.py
cfp/: README.md  deadlines.md
config/profiles/: black_studies.json  hps.json
docs/: ACCOUNTABILITY.md  CFP_PARSER.md  LOCAL_FIRST_RUN.md  PAGES.md  PROJECT_OVERVIEW.md  RELEASE.md  RELEASE_PROCESS.md  WINDOWS_APP.md
examples/: bsky_watchlist.example.txt  feedly.example.opml
scripts/: cfp_backfill_archive.py  cfp_deadline_digest.py  cfp_ingest_archive.py  cfp_parse_text.py  validate_release.py  write_audit_event.py
site/: app.js  enhancements.js  index.html  styles.css
tests/: test_cli.py  test_diagnostics.py  test_gui_packaging.py  test_privacy_report.py  test_radar_core.py  test_score_reasons.py  test_setup.py  test_summary.py
(+13 files in other folders)
